# hello-again

./: meson.build
data/: com.github.ondb.hello-again.appdata.xml  com.github.ondb.hello-again.desktop.in
po/: POTFILES  com.github.ondb.hello-again.pot  tr.po
src/: Application.vala
